[gd_scene load_steps=3 format=3 uid="uid://bcf5cijtnm2sw"]

[ext_resource type="Script" path="res://minigames/raheem_battle/manager/raheem_battle.gd" id="1_nlfe7"]
[ext_resource type="PackedScene" uid="uid://dniq8ycjwht5m" path="res://minigames/raheem_battle/menu/menu.tscn" id="1_ti5sv"]

[node name="battle-manager" type="Node2D"]
script = ExtResource("1_nlfe7")

[node name="Menu" parent="." instance=ExtResource("1_ti5sv")]

[node name="NetworkInfo" type="VBoxContainer" parent="."]
visible = false
offset_right = 450.0
offset_bottom = 86.0
mouse_filter = 2

[node name="game_type" type="Label" parent="NetworkInfo"]
unique_name_in_owner = true
z_index = 4096
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 10
text = "GameType:"

[node name="peer_id" type="Label" parent="NetworkInfo"]
unique_name_in_owner = true
z_index = 4096
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 10
text = "PeerID:
"

[node name="room_address" type="Label" parent="NetworkInfo"]
unique_name_in_owner = true
z_index = 4096
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 10
text = "RoomAddress:"

[node name="side" type="Label" parent="NetworkInfo"]
z_index = 4096
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 10
text = "Side: "

[node name="turn_count" type="Label" parent="NetworkInfo"]
z_index = 4096
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 10
text = "TurnCount:"
